[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bresenham = "0.1.1"
mut_static = "5.0.0"
lazy_static = "1.4.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.80"
json = "0.12.4"

[lib]
crate-type = ["cdylib"]